completed story on existence of height, circumference, and result fields

--- a/BoardFeetCalculator/res/layout/activity_calculator.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculator.xml
@@ -3,12 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
+    <EditText
+        android:id="@+id/editHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".Calculator" />
+        android:layout_marginTop="27dp"
+        android:ems="10" >
 
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/editCircumference"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editHeight"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="58dp"
+        android:ems="10" />
+
+    <TextView
+        android:id="@+id/textResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="82dp"
+        android:text="TextView" />
+    
 </RelativeLayout>
