--- a/BoardFeetCalculator/res/layout/activity_calculator.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculator.xml
@@ -10,7 +10,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"
-        android:ems="10" >
+        android:ems="10" 
+        android:inputType="numberDecimal">
 
         <requestFocus />
     </EditText>
@@ -22,7 +23,8 @@
         android:layout_below="@+id/editHeight"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="58dp"
-        android:ems="10" />
+        android:ems="10" 
+        android:inputType="numberDecimal"/>
 
     <TextView
         android:id="@+id/textResult"
@@ -31,6 +33,25 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="82dp"
-        android:text="TextView" />
+        android:text="@+string/label_superfluous" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@+string/label_height"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editHeight"
+        android:layout_marginTop="31dp"
+        android:text="@+string/label_circumference"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
     
 </RelativeLayout>
