Rich D: corrected issues in activity_calculator.xml, removed blocking activity_calculator.xml.orig file, regenned app

--- a/BoardFeetCalculator/res/layout/activity_calculator.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculator.xml
@@ -24,8 +24,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="58dp"
         android:inputType="numberDecimal"
-        android:imeOptions="actionDone" />
-        android:hint="@string/circumference_hint"
+        android:imeOptions="actionDone"
+        android:hint="@+string/circumference_hint"
         android:ems="10" />
 
     <TextView
