Rich D: refactors; moved the event listener to its own class, with its tests; simplified Calculators oncreate; Removed exposed Diameter member from Calculator; NEW; Added output field for calculation. Would like help with test cases for CircumferenceActionListener.

--- a/BoardFeetCalculator/res/layout/activity_calculator.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculator.xml
@@ -55,5 +55,15 @@
         android:layout_marginTop="31dp"
         android:text="@+string/label_circumference"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editBoardFeet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textResult"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="74dp"
+        android:ems="10"
+        android:inputType="text" />
     
 </RelativeLayout>
