--- a/BoardFeetCalculator/res/layout/activity_calculatorsettings.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculatorsettings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <ListPreference
-        android:key="calculation_setting_pref"
-        android:title="Calculation Type" 
-        android:entries="@array/calculationArray"
-        android:entryValues="@array/calculationValues"/>
-    <CheckBoxPreference
-        android:key="photo_pref"
-        android:title="@string/photo_pref"
-        android:defaultValue="true" />
+    <PreferenceCategory android:title="@string/preferences">
+	    <ListPreference
+	        android:key="calculation_setting_pref"
+	        android:title="Calculation Type" 
+	        android:entries="@array/calculationArray"
+	        android:entryValues="@array/calculationValues"/>
+	    <CheckBoxPreference
+	        android:key="photo_pref"
+	        android:title="@string/photo_pref"
+	        android:defaultValue="true" />
+    </PreferenceCategory>
 </PreferenceScreen>
