--- a/BoardFeetCalculator/res/layout/activity_calculator.xml
+++ b/BoardFeetCalculator/res/layout/activity_calculator.xml
@@ -55,7 +55,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="136dp"
         android:layout_toRightOf="@+id/textView2"
-        android:text="lat" />
+        android:text="@+string/label_latitude" />
 
     <TextView
         android:id="@+id/displayLongitude"
@@ -64,7 +64,7 @@
         android:layout_alignLeft="@+id/displayLatitude"
         android:layout_alignTop="@+id/displayLatitude"
         android:layout_marginTop="28dp"
-        android:text="lon" />
+        android:text="@+string/label_longitude" />
 
     <TextView
         android:id="@+id/textView4"
